# ofs-mockup-srv

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  debug.txt  pyproject.toml
doc/: API.md  ARCHITECTURE.md  DATA_TYPES.md  DEVELOPMENT.md  EXAMPLES.md  README.md  SEQUENCES.md  WORKFLOWS.md
input/: api_attention.md  api_invoices_changes.md  api_invoices_changes_2.md  api_pin.md  byer_id.md  current_api_attention.md  discount_amount_ignore.md  error_return.md  verification_url_example.md
ofs_mockup_srv/: main.py
scripts/: curl_hello.sh  curl_post_invoice.sh  demo_flows.sh  nextcloud_upload_windows.py  push_to_nextcloud.py  send_get_invoice.sh  start_server.py  upload_wheelhouse.bat  upload_wheelhouse.ps1
tests/: test_endpoints.py
wheelhouse/: bringout_ofs_mockup_srv-0.3.3-py3-none-any.whl  requirements.txt  requirements_clean.txt
